// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`undo Should undo/redo to expected level intervals 1`] = `
"<!-- wp:paragraph -->
<p>This</p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p>is</p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p>test</p>
<!-- /wp:paragraph -->"
`;

exports[`undo Should undo/redo to expected level intervals 2`] = `
"<!-- wp:paragraph -->
<p>This</p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p>is</p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p></p>
<!-- /wp:paragraph -->"
`;

exports[`undo Should undo/redo to expected level intervals 3`] = `
"<!-- wp:paragraph -->
<p>This</p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p>is</p>
<!-- /wp:paragraph -->"
`;

exports[`undo Should undo/redo to expected level intervals 4`] = `
"<!-- wp:paragraph -->
<p>This</p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p></p>
<!-- /wp:paragraph -->"
`;

exports[`undo Should undo/redo to expected level intervals 5`] = `
"<!-- wp:paragraph -->
<p>This</p>
<!-- /wp:paragraph -->"
`;

exports[`undo Should undo/redo to expected level intervals 6`] = `""`;

exports[`undo Should undo/redo to expected level intervals 7`] = `""`;

exports[`undo Should undo/redo to expected level intervals 8`] = `""`;

exports[`undo Should undo/redo to expected level intervals 9`] = `
"<!-- wp:paragraph -->
<p>This</p>
<!-- /wp:paragraph -->"
`;

exports[`undo Should undo/redo to expected level intervals 10`] = `
"<!-- wp:paragraph -->
<p>This</p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p></p>
<!-- /wp:paragraph -->"
`;

exports[`undo Should undo/redo to expected level intervals 11`] = `
"<!-- wp:paragraph -->
<p>This</p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p>is</p>
<!-- /wp:paragraph -->"
`;

exports[`undo Should undo/redo to expected level intervals 12`] = `
"<!-- wp:paragraph -->
<p>This</p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p>is</p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p></p>
<!-- /wp:paragraph -->"
`;

exports[`undo Should undo/redo to expected level intervals 13`] = `
"<!-- wp:paragraph -->
<p>This</p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p>is</p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p>test</p>
<!-- /wp:paragraph -->"
`;

exports[`undo should immediately create an undo level on typing 1`] = `
"<!-- wp:paragraph -->
<p>1</p>
<!-- /wp:paragraph -->"
`;

exports[`undo should undo typing after a pause 1`] = `
"<!-- wp:paragraph -->
<p>before pause after pause</p>
<!-- /wp:paragraph -->"
`;

exports[`undo should undo typing after a pause 2`] = `
"<!-- wp:paragraph -->
<p>before pause</p>
<!-- /wp:paragraph -->"
`;

exports[`undo should undo typing after non input change 1`] = `
"<!-- wp:paragraph -->
<p>before keyboard <strong>after keyboard</strong></p>
<!-- /wp:paragraph -->"
`;

exports[`undo should undo typing after non input change 2`] = `
"<!-- wp:paragraph -->
<p>before keyboard </p>
<!-- /wp:paragraph -->"
`;
